--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yeoman-easily",
-  "version": "0.0.1-2",
+  "version": "0.1.0",
   "description": "Ways to use yeoman more easily",
   "homepage": "",
   "author": {
