--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-nsp": "^2.1.0",
     "gulp-plumber": "^1.0.0",
     "isparta": "^4.0.0",
+    "jsdoc-to-markdown": "^1.3.6",
     "yeoman-assert": "^2.2.1",
     "yeoman-generator": "^0.24.1",
     "yeoman-test": "^1.4.0",
@@ -61,7 +62,8 @@
   "repository": "kristw/yeoman-easily",
   "scripts": {
     "prepublish": "gulp prepublish",
-    "test": "gulp"
+    "test": "gulp",
+    "docs": "jsdoc2md lib/*.js > docs/api.md"
   },
   "license": "Apache-2.0"
 }
