--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yeoman-easily",
-  "version": "0.3.4",
+  "version": "0.4.0",
   "description": "Ways to use yeoman more easily",
   "homepage": "",
   "author": {
@@ -65,7 +65,7 @@
     "prepublish": "gulp prepublish",
     "test": "gulp",
     "docs": "jsdoc2md lib/*.js > docs/api.md",
-    "version": "npm run build && npm run docs && git add -A dist && git add -A docs",
+    "version": "npm run build && npm run docs && git add -A docs",
     "postversion": "git push ; git push --tags"
   },
   "license": "Apache-2.0"
